fix - inputs alignement

--- a/src/views/Subscription.module.scss
+++ b/src/views/Subscription.module.scss
@@ -38,7 +38,7 @@
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 
     .input_field {
       margin-bottom: 1rem;
